--- a/src/components/DataTable/DataTable.scss
+++ b/src/components/DataTable/DataTable.scss
@@ -1,16 +1,26 @@
 $themeColor : #222d48;
+$headerColor : #f2f2f2;
 .container{
     margin-left: 100px;
     margin-right: 100px;
     margin-top: 20px;
-    ul li{margin: 0;padding: 0; display: inline}
-    
-    &__headername{
+    border: 1px solid rgb(238, 235, 235);
+    li{margin: 0;padding: 0; display: inline; }
+    ul {margin: 0;padding: 0; margin-top: 0;padding-top: 10px;padding-bottom: 10px;}
+    ul{
         display: grid;
         padding-top: 10px;
         padding-bottom: 10px;
+        margin-left: 10px;
+        margin-right: 10px;
         grid-template-columns: 20% 30% 20% 50%;
-        background-color: #f2f2f2;
         font-size: 10px;
+        padding-left: 20px;
+        border-bottom: 1px solid rgb(238, 235, 235);
+    }
+    ul:first-child{
+        background-color: $headerColor;   
+        margin-left: 0px;
+        margin-right: 0px;
     }
 }
